--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
-@import url(//db.onlinewebfonts.com/c/ce4b0ee545ec52c2ec8cec62d23ffb09?family=Calculator);
+import url(//db.onlinewebfonts.com/c/ce4b0ee545ec52c2ec8cec62d23ffb09?family=Calculator);
 @font-face {font-family: "Calculator"; src: url("//db.onlinewebfonts.com/t/ce4b0ee545ec52c2ec8cec62d23ffb09.eot"); src: url("//db.onlinewebfonts.com/t/ce4b0ee545ec52c2ec8cec62d23ffb09.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/ce4b0ee545ec52c2ec8cec62d23ffb09.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/ce4b0ee545ec52c2ec8cec62d23ffb09.woff") format("woff"), url("//db.onlinewebfonts.com/t/ce4b0ee545ec52c2ec8cec62d23ffb09.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/ce4b0ee545ec52c2ec8cec62d23ffb09.svg#Calculator") format("svg"); }
 audio{
     display: none;
@@ -74,3 +74,4 @@ button{
     color:#00FA9A;
     background-color: black;
 }
+
